--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "gh-pages": "^5.0.0",
     "html2canvas": "^1.4.1",
     "react": "^18.2.0",
